--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,5 @@
-<h1>Sample App2</h1>
+<% provide(:title, "Home") %>
+<h1>Sample App</h1>
 <p>
   This is the home page for the
   <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
